[package]
name = "loom-actors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
eyre.workspace = true
async-trait.workspace = true
loom-actors-macros.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
