[package]
name = "debug-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
async-trait.workspace = true
log.workspace = true
eyre.workspace = true
k256.workspace = true
reqwest.workspace = true
tower.workspace = true
url.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
rand.workspace = true
tokio.workspace = true


alloy-provider.workspace = true
alloy-network.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-trace.workspace = true
alloy-primitives.workspace = true
alloy-transport.workspace = true
alloy-transport-http.workspace = true
alloy-rpc-client.workspace = true
alloy-node-bindings.workspace = true
alloy-json-rpc.workspace = true

[dev-dependencies]
env_logger.workspace = true
url.workspace = true
defi-abi.workspace = true

alloy-provider.workspace = true
alloy-rpc-client.workspace = true
