[package]
name = "defi-actors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loom-actors.workspace = true
loom-actors-macros.workspace = true
loom-multicaller.workspace = true
defi-types.workspace = true
defi-entities.workspace = true
defi-events.workspace = true
defi-abi.workspace = true
defi-pools.workspace = true
flashbots.workspace = true
debug-provider.workspace = true
loom-utils.workspace = true
loom-revm-db.workspace = true
defi-blockchain.workspace = true

eyre.workspace = true
tokio.workspace = true
rayon.workspace = true
log.workspace = true
chrono.workspace = true
futures.workspace = true
lazy_static.workspace = true
num_cpus.workspace = true

rand = "0.8.5"


alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-trace.workspace = true
alloy-sol-types.workspace = true
alloy-transport.workspace = true
alloy-pubsub.workspace = true
alloy-eips.workspace = true
alloy-rlp.workspace = true
alloy-consensus.workspace = true
alloy-network.workspace = true

revm.workspace = true

reth-db.workspace = true
reth-exex.workspace = true
reth-chainspec.workspace = true
reth-rpc-types-compat.workspace = true
reth-provider.workspace = true
reth-primitives.workspace = true

example-exex-remote.workspace = true



[dev-dependencies]
alloy-rpc-client.workspace = true
env_logger.workspace = true

