[package]
name = "defi-actors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
debug-provider.workspace = true
defi-abi.workspace = true
defi-address-book.workspace = true
defi-blockchain.workspace = true
defi-entities.workspace = true
defi-events.workspace = true
defi-pools.workspace = true
defi-types.workspace = true
flashbots.workspace = true
loom-actors.workspace = true
loom-actors-macros.workspace = true
loom-metrics.workspace = true
loom-multicaller.workspace = true
loom-revm-db.workspace = true
loom-utils.workspace = true
reth-exex-grpc.workspace = true

chrono.workspace = true
eyre.workspace = true
futures.workspace = true
lazy_static.workspace = true
num_cpus.workspace = true
rand.workspace = true
rayon.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

alloy.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-pubsub.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-trace.workspace = true
alloy-sol-types.workspace = true
alloy-transport.workspace = true

revm.workspace = true

reth-chainspec.workspace = true
reth-db.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true
reth-node-builder.workspace = true
reth-node-ethereum.workspace = true
reth-node-types.workspace = true
reth-primitives.workspace = true
reth-provider.workspace = true
reth-rpc.workspace = true
reth-rpc-types-compat.workspace = true
reth-transaction-pool.workspace = true


[[bench]]
harness = false
name = "swap_calculation_bench"

[dev-dependencies]
alloy-node-bindings.workspace = true
alloy-rpc-client.workspace = true
env_logger.workspace = true

criterion = { version = "0.5.1", features = ["async_tokio"] }
