[package]
name = "defi-blockchain-actors"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
debug-provider.workspace = true
defi-actors.workspace = true
defi-address-book.workspace = true
defi-blockchain.workspace = true
defi-entities.workspace = true
defi-pools.workspace = true
flashbots.workspace = true
loom-actors.workspace = true
loom-metrics.workspace = true
loom-multicaller.workspace = true
loom-utils.workspace = true
loom-web.workspace = true

axum.workspace = true
eyre.workspace = true
tokio-util.workspace = true

# alloy
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-transport.workspace = true
