[package]
name = "defi-blockchain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
defi-address-book.workspace = true
defi-entities.workspace = true
defi-events.workspace = true
defi-types.workspace = true
loom-actors.workspace = true
loom-actors-macros.workspace = true

alloy.workspace = true
influxdb.workspace = true
revm.workspace = true
