[package]
name = "defi-entities"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

#[build-dependencies]
#rand.workspace = true

[dependencies]
alloy-transport.workspace = true
alloy-provider.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-trace.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
alloy-network.workspace = true
alloy-consensus.workspace = true
alloy-rlp.workspace = true


revm.workspace = true

reth-revm.workspace = true
reth-provider.workspace = true
reth-node-builder.workspace = true
reth-db.workspace = true
reth-chainspec.workspace = true
reth-node-ethereum.workspace = true


tokio.workspace = true
eyre.workspace = true
tracing.workspace = true
hex.workspace = true
lazy_static.workspace = true
rand.workspace = true
sha2.workspace = true
aes.workspace = true
strum.workspace = true
strum_macros.workspace = true
indexmap.workspace = true

defi-types.workspace = true
loom-revm-db.workspace = true
loom-utils.workspace = true
debug-provider.workspace = true

serde.workspace = true

[build-dependencies]
rand.workspace = true
hex.workspace = true

[dev-dependencies]
alloy-node-bindings.workspace = true
alloy-rpc-client.workspace = true